fixed the overflow problem

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ Global Settings
   box-sizing: border-box;
   font-family: "DM Sans", sans-serif;
   font-size: 28px;
+  /* overflow-x: auto; */
 }
 
 body {
@@ -61,6 +62,7 @@ Navbar Styles
   border-bottom-right-radius: 60px;
   height: 40px;
   cursor: pointer;
+  overflow: hidden;
 }
 
 #search-container {
@@ -121,7 +123,7 @@ SECTION 1
   display: flex;
   align-items: center;
   /* Removing the extra margin or padding created while adding the social share */
-  margin-top: -100px;
+  /* margin-top: -100px; */
 }
 
 /* Left Card */
@@ -204,6 +206,7 @@ SECTION 1
 .cards-section p {
   font-size: 28px;
   font-weight: bold;
+  overflow: hidden;
 }
 
 /* Card Colors */
@@ -248,6 +251,7 @@ SECTION - 2
 
 .info-left {
   margin-left: 30px;
+  overflow: hidden;
 }
 
 /* Categories */
